--- a/levels/easy.html
+++ b/levels/easy.html
@@ -12,14 +12,30 @@
     <h1><a href="../index.html">Tic Tac Toe</a></h1>
     <h2>Easy</h2>
 
+    <!--  SCOREBOARD -->
+    <div id="scoreboard">
+      <p>Player: <span id="playerScore">0</span></p>
+      <p>Computer: <span id="computerScore">0</span></p>
+      <p>Draws: <span id="drawScore">0</span></p>
+    </div>
+
+    <!--  GAME BOARD -->
     <div class="board" id="easy-board">
       <!-- Squares will be created by JS -->
     </div>
 
+    <!--  MESSAGE + BUTTON -->
     <p id="message"></p>
     <button id="resetBtn">Restart</button>
+
+    <a href="../index.html" class="back-btn">← Back to Home</a>
   </div>
 
+  <footer>
+    <p>
+      Created by <strong><a href="https://github.com/Nadraht" target="_blank" rel="noopener noreferrer">Nadraht Mohammed</a></strong> | Python & Web Developer.
+    </p>
+  </footer>
   <script src="../easy.js"></script>
 </body>
 </html>
