--- a/index.html
+++ b/index.html
@@ -3,21 +3,29 @@
 <head> 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Play Tic Tac Toe by Nadraht, a fun game with 3 difficulty levels: Easy, Normal, and Hard. Try to beat the computer!">
+    <meta name="description" content="Play Tic Tac Toe by Nadraht, a fun game with 3 difficulty levels: Easy, Normal, and Hard. Challenge yourself to beat the computer!">
     <title>Tic Tac Toe | by Nadraht</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div class="game-container">
+    <header>
         <h1><a href="index.html">Tic Tac Toe</a></h1>
-        <div class="level">
-            <p>Are you confident in your Tic Tac Toe skills? Try to beat the computer at every level (Easy, Normal and Hard). Let's see if you can?</p>
-            <h2>Difficulty:</h2>
-            <p><a href="levels/easy.html"> Easy </a></p><br><br>
-            <p><a href="levels/normal.html"> Normal </a></p><br><br>
-            <p><a href="levels/hard.html"> Hard </a></p><br><br>
+        <nav>
+            <ul>
+                <li><a href="rules.html">Rules</a></li>
+                <li><a href="scores.html">Scores</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="level">
+        <p>Are you confident in your Tic Tac Toe skills? Try to beat the computer at every level (Easy, Normal and Hard). Let's see if you can?</p>
+        <h2>Difficulty:</h2>
+        <div class="difficulty-links">
+            <a href="levels/easy.html">Easy</a>
+            <a href="levels/normal.html">Normal</a>
+            <a href="levels/hard.html">Hard</a>
         </div>
-    </div>
+    </main>
     <footer>
         <p>
             Created by <strong><a href="https://github.com/Nadraht" target="_blank" rel="noopener noreferrer"> Nadraht Mohammed</a></strong> | Python & Web Developer.
